force-app/main/default/objects/CustomObjectA__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>セッションIDリセット区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>