force-app/main/default/objects/CustomObjectA__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <formula>Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>注意</label>
    <type>Text</type>
</CustomField>