force-app/main/default/objects/CustomObjectA__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>承認ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未申請</fullName>
            </value>
            <value>
                <fullName>GM承認中</fullName>
            </value>
            <value>
                <fullName>副部長承認中</fullName>
            </value>
            <value>
                <fullName>部長承認中</fullName>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>