force-app/main/default/objects/CustomObjectA__c/fields/CheckBox__c.field-meta.xml
<CustomField>
    <fullName>CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェックボックス</label>
    <type>Checkbox</type>
</CustomField>