force-app/main/default/objects/CustomObjectA__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CustomObjectA</relationshipName>
    <type>Lookup</type>
</CustomField>