force-app/main/default/objects/CustomObjectA__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>日付時間</label>
    <type>DateTime</type>
</CustomField>