force-app/main/default/objects/CustomObjectA__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <formula>HYPERLINK(&quot;/CustomerService001/flow/X45651634?Id=&quot; &amp; Id &amp; &quot;&amp;retURL=/CustomerService001/s/&quot;,&quot;Flow&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flow</label>
    <type>Text</type>
</CustomField>