force-app/main/default/objects/CustomObjectA__c/fields/GeneralManager__c.field-meta.xml
<CustomField>
    <fullName>GeneralManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>部長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GeneralManager</relationshipName>
    <type>Lookup</type>
</CustomField>