force-app/main/default/objects/CustomObjectA__c/fields/GroupManager__c.field-meta.xml
<CustomField>
    <fullName>GroupManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>グループマネージャー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GroupManager</relationshipName>
    <type>Lookup</type>
</CustomField>