force-app/main/default/objects/CustomObjectA__c/fields/Human__c.field-meta.xml
<CustomField>
    <fullName>Human__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>人</label>
    <referenceTo>Human__c</referenceTo>
    <relationshipLabel>カスタムオブジェクトA</relationshipLabel>
    <relationshipName>CustomObjectA</relationshipName>
    <type>Lookup</type>
</CustomField>