force-app/main/default/objects/CustomObjectA__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IF(Text__c =&quot;前金&quot;, IMAGE(&quot;/resource/PaymentInAdvance&quot;, &quot;前金&quot;, 50, 50), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>画像</label>
    <type>Text</type>
</CustomField>