force-app/main/default/objects/CustomObjectA__c/fields/listCheck__c.field-meta.xml
<CustomField>
    <fullName>listCheck__c</fullName>
    <formula>AND( CheckBox__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>listCheck</label>
    <type>Checkbox</type>
</CustomField>