force-app/main/default/objects/CustomObjectA__c/fields/MultiSelectList1__c.field-meta.xml
<CustomField>
    <fullName>MultiSelectList1__c</fullName>
    <label>複数選択リスト</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>