force-app/main/default/objects/CustomObjectA__c/fields/Num1__c.field-meta.xml
<CustomField>
    <fullName>Num1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>数値1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>