force-app/main/default/objects/CustomObjectA__c/fields/Num2__c.field-meta.xml
<CustomField>
    <fullName>Num2__c</fullName>
    <label>数値2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>