force-app/main/default/objects/CustomObjectA__c/fields/Oppotunity__c.field-meta.xml
<CustomField>
    <fullName>Oppotunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>新規・既存</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>CustomObjectA</relationshipName>
    <type>Lookup</type>
</CustomField>