force-app/main/default/objects/CustomObjectA__c/fields/salesCAGR__c.field-meta.xml
<CustomField>
    <fullName>salesCAGR__c</fullName>
    <formula>(2^sqrt(2.5))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>売上成長率</label>
    <precision>18</precision>
    <scale>18</scale>
    <type>Number</type>
</CustomField>