force-app/main/default/objects/CustomObjectA__c/fields/SelectList2__c.field-meta.xml
<CustomField>
    <fullName>SelectList2__c</fullName>
    <label>選択リスト2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SelectList__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>