force-app/main/default/objects/CustomObjectA__c/fields/SelectList3__c.field-meta.xml
<CustomField>
    <fullName>SelectList3__c</fullName>
    <label>選択リスト3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SelectList2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>DDD</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>