force-app/main/default/objects/CustomObjectA__c/fields/SelectList4__c.field-meta.xml
<CustomField>
    <fullName>SelectList4__c</fullName>
    <label>選択リスト4</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SelectList3__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAAA</fullName>
            </value>
            <value>
                <fullName>BBBB</fullName>
            </value>
            <value>
                <fullName>CCCC</fullName>
            </value>
            <value>
                <fullName>DDDD</fullName>
            </value>
            <value>
                <fullName>EEEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>