force-app/main/default/objects/CustomObjectA__c/fields/SubManager__c.field-meta.xml
<CustomField>
    <fullName>SubManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>副部長</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubManager</relationshipName>
    <type>Lookup</type>
</CustomField>