force-app/main/default/objects/CustomObjectA__c/fields/SumItem__c.field-meta.xml
<CustomField>
    <fullName>SumItem__c</fullName>
    <label>積み上げ集計</label>
    <summarizedField>CustomObjectAA__c.Num__c</summarizedField>
    <summaryForeignKey>CustomObjectAA__c.CustomObjectA__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>