force-app/main/default/objects/CustomObjectA__c/fields/Sushiki__c.field-meta.xml
<CustomField>
    <fullName>Sushiki__c</fullName>
    <formula>DATEVALUE( DateTime__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>数式</label>
    <type>Date</type>
</CustomField>