force-app/main/default/objects/CustomObjectA__c/fields/Text2__c.field-meta.xml
<CustomField>
    <fullName>Text2__c</fullName>
    <label>テキスト２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>