force-app/main/default/objects/CustomObjectA__c/fields/Text3__c.field-meta.xml
<CustomField>
    <fullName>Text3__c</fullName>
    <label>テキスト3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>wer1</fullName>
            </value>
            <value>
                <fullName>あああ</fullName>
            </value>
            <value>
                <fullName>江尾rジェおrj千枝rt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>