force-app/main/default/objects/CustomObjectA__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <defaultValue>&quot;注意です！！注意です！！注意です！！注意です！！注意です！！注意です！！注意です！！注意です！！注意です！！注意です！！&quot;</defaultValue>
    <label>テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>