force-app/main/default/objects/CustomObjectA__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>時間</label>
    <type>Time</type>
</CustomField>