force-app/main/default/objects/CustomObjectA__c/fields/TimeText__c.field-meta.xml
<CustomField>
    <fullName>TimeText__c</fullName>
    <formula>TEXT( Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeText</label>
    <type>Text</type>
</CustomField>