force-app/main/default/objects/CustomObjectA__c/fields/TodayIs__c.field-meta.xml
<CustomField>
    <fullName>TodayIs__c</fullName>
    <formula>Day(today())=22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>今日はx日</label>
    <type>Checkbox</type>
</CustomField>