force-app/main/default/objects/CustomObjectA__c/fields/urr__c.field-meta.xml
<CustomField>
    <fullName>urr__c</fullName>
    <formula>$Setup.TestCustom__c.urrl__c &amp; &quot;?id=sss&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>urr</label>
    <type>Text</type>
</CustomField>