force-app/main/default/objects/CustomObjectA__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomObjectA</relationshipName>
    <type>Lookup</type>
</CustomField>