force-app/main/default/objects/CustomObjectA__c/validationRules/aaaaa.validationRule-meta.xml
<ValidationRule>
    <fullName>aaaaa</fullName>
    <active>false</active>
    <errorConditionFormula>IF(ISNEW(), DateTime__c &lt; NOW(), DateTime__c  &lt;  CreatedDate)</errorConditionFormula>
    <errorMessage>前の日付やで</errorMessage>
</ValidationRule>