force-app/main/default/objects/CustomObjectA__c/validationRules/bbbbb.validationRule-meta.xml
<ValidationRule>
    <fullName>bbbbb</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Currency__c &gt; 1000000, ISBLANK(Text2__c))</errorConditionFormula>
    <errorMessage>金額オーバー</errorMessage>
</ValidationRule>