force-app/main/default/objects/CustomObjectA__c/validationRules/HankakuKana.validationRule-meta.xml
<ValidationRule>
    <fullName>HankakuKana</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( Text__c ))</errorConditionFormula>
    <errorMessage>半角カナ以外が複mされて</errorMessage>
</ValidationRule>