force-app/main/default/objects/CustomObjectA__c/listViews/FlowView.listView-meta.xml
<ListView>
    <fullName>FlowView</fullName>
    <columns>Flow__c</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>FlowView</label>
</ListView>